ott / properties / .sql update

--- a/HoneyPot_back/honeyPot/src/main/resources/application.properties
+++ b/HoneyPot_back/honeyPot/src/main/resources/application.properties
@@ -17,6 +17,16 @@ spring.jpa.generate-ddl=true
 spring.jpa.database=oracle
 spring.jpa.show-sql=true
 
+# sql
+#데이터베이스 초기화 모드 설정
+spring.sql.init.mode=always
+#데이터소스 초기화를 지연시킬지 여부를 설정
+spring.jpa.defer-datasource-initialization=true
+#data.sql 파일의 내용을 실행할 때, 오류가 발생해도 계속해서 실행할지 여부
+spring.sql.init.continue-on-error=true
+# data.sql 파일을 사용하여 초기 데이터 로딩 (기본값: data.sql)
+spring.sql.init.data-locations=classpath:data.sql
+
 #auto build
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
@@ -25,27 +35,3 @@ spring.devtools.restart.enabled=true
 spring.servlet.multipart.location=C:/honeypot/
 spring.servlet.multipart.max-file-size=5MB
 
-#ott
-ott.vo[0].type=Netflix
-ott.vo[0].price=17000
-ott.vo[0].maxPpl=4
-
-ott.vo[1].type=Tving
-ott.vo[1].price=13900
-ott.vo[1].maxPpl=4
-
-ott.vo[2].type=Wave
-ott.vo[2].price=13900
-ott.vo[2].maxPpl=4
-
-ott.vo[3].type=Disney+
-ott.vo[3].price=9900
-ott.vo[3].maxPpl=4
-
-ott.vo[4].type=Watcha
-ott.vo[4].price=12900
-ott.vo[4].maxPpl=4
-
-ott.vo[5].type=Apple
-ott.vo[5].price=20900
-ott.vo[5].maxPpl=5
