chat dao, chat service, chatCheck dao, chat check service, webSocketConfig, sockethandler 2023/08/10

--- a/HoneyPot_back/honeyPot/pom.xml
+++ b/HoneyPot_back/honeyPot/pom.xml
@@ -59,7 +59,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
+        <!-- websocket -->		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<!-- websoket -->
+		
+		
       	<dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
