--- a/HoneyPot_back/honeyPot/pom.xml
+++ b/HoneyPot_back/honeyPot/pom.xml
@@ -17,8 +17,23 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	<repositories>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>   
+     </repositories>
+	
+	
 	<dependencies>
 <!--		ConfigurationProperties-->
+
+ <dependency>
+    <groupId>com.github.iamport</groupId>
+    <artifactId>iamport-rest-client-java</artifactId>
+    <version>0.2.14</version>
+</dependency>
+
 		<dependency>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-configuration-processor</artifactId>
