2023-08-14 05:28 back - pom.xml(의존성 추가), MemberService, MemberController, CertificationService / front - JoinMainpage, HoneypotJoin, CertificaitonCheck(삭제)

--- a/HoneyPot_back/honeyPot/pom.xml
+++ b/HoneyPot_back/honeyPot/pom.xml
@@ -102,12 +102,13 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-		
-		
-		
-		
-		
-		
+
+    	<dependency>
+        	<groupId>org.json</groupId>
+       		<artifactId>json</artifactId>
+       		<version>20210307</version> <!-- 적절한 버전으로 변경하세요 -->
+    	</dependency>
+
 	</dependencies>
 
 	<build>
