2023-08-15 04:13 front - HoneypotJoin, JoinComlete, LoginPage / back - Member, MemberDao, MemberSerivce, MemberController, EmailService, pom.xml(메일 의존성 추가), application.properties(메일 관련 내용 추가)

--- a/HoneyPot_back/honeyPot/pom.xml
+++ b/HoneyPot_back/honeyPot/pom.xml
@@ -109,6 +109,10 @@
        		<version>20210307</version> <!-- 적절한 버전으로 변경하세요 -->
     	</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
