--- a/HoneyPot_back/honeyPot/src/main/resources/application.properties
+++ b/HoneyPot_back/honeyPot/src/main/resources/application.properties
@@ -35,3 +35,16 @@ spring.devtools.restart.enabled=true
 spring.servlet.multipart.location=C:/honeypot/
 spring.servlet.multipart.max-file-size=5MB
 
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wyk160@gmail.com
+spring.mail.password=tsmtgwnjqjzycytu
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.mime.charset=UTF-8
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.connectiontimeout=18000
+spring.mail.properties.mail.smtp.timeout=18000
+spring.mail.properties.mail.smtp.writetimeout=18000
