--- a/HoneyPot_front/honeypot_vue/package.json
+++ b/HoneyPot_front/honeypot_vue/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8989",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "build": "^0.1.4",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.9",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
